# ProbeDesign

./: .gitignore  BOWTIE.md  CLAUDE.md  README.md  REPEATMASKER.md  TEST.md  pyproject.toml  readBowtieOutput.m  run_tests.sh
DesignServer/: HOTAIR2.txt  HOTAIR_short.txt  Lgr5.txt  README.txt  README_findprobesLocal.txt  biosearch_test.txt  bowtie_local.py  bowtie_search.py  bowtie_server.py  call_probe_design_V3_1.m  call_probe_design_V4.m  designserver.py  designserverV3.py  designserverV3_1.py  designserverV4.py  fasta.py  find_bowtie_hits.m  find_bowtie_hits_local.m  find_probes.py  find_probes_cl.py  find_python_exe.m  hRAP1.txt  hRAP1_nofasta.txt  probe_design.py  repeat_masker.py  sample_bowtie_search.txt  sample_findprobesV4_call.txt  sample_findprobes_call.txt  screen_sequence.py  seq.py  shark_tank.fa  test_bad.py  testing.py
SampleSequences/: HOTAIR.txt
maskprobes/: design.py  fasta.py  thermo.py
oligo_probe_design/: README.md  __init__.py  __main__.py  cli.py  requirements.txt  setup.py
panprobedesign/: cleanAlignedFastas.m  computeOligoMatchScore.m  findpanprobesHD.m  findpanprobesHD_findMinNumOligos.m  generateAlignedFilePanProbe.m  generateOligoFilePanProbes.m  getSequenceCrossMatches.m  selectBestPanOligoFromCandidates.m  selectBestPanOligoFromCandidates_findMinNumOligos.m
probedesign/: GC_badness.m  GCtotal_badness.m  SubString_boolean.java  Tm_badness.m  Tm_badness.m.orig  Tm_badness_RNA_DNA.m  align_oligo_file.m  align_oligo_file_RNA_DNA.m  bad_acgt.m  bad_gc.m  blasthitsbatch.m  blastmask.m  blastncbishortseqs.m  calcscore.m  comp.m  getGC.m  (+53 more)
(+49 files in other folders)
