[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probedesign"
version = "0.1.0"
description = "Design oligonucleotide probes for FISH experiments"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Raj Lab"}
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
probedesign = "probedesign.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
